; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_port.c_mach_sync_ipc_link_monitoring_stop.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_port.c_mach_sync_ipc_link_monitoring_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_sync_ipc_link_monitoring_stop(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @TRUE, align 4
  store i32 %7, i32* %6, align 4
  %8 = call i32 (...) @mach_task_self()
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @_kernelrpc_mach_port_special_reply_port_reset_link(i32 %8, i32 %9, i32* %6)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = load i32*, i32** %4, align 8
  store i32 %14, i32* %15, align 4
  %16 = call i32 (...) @mach_task_self()
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @mach_port_deallocate(i32 %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @_kernelrpc_mach_port_special_reply_port_reset_link(i32, i32, i32*) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @mach_port_deallocate(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
